@@ -23,7 +23,12 @@ In each of the following
 .IB opts ,
 .I n
 may be =, indicating that the soft limit should be set equal to the hard
-limit. 
+limit.
+
+In each of the following
+.IB opts ,
+.I n
+may be -1, indicating that soft limit be unlimited.
 
 .I opts
 .B controlling memory use: 
